--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,14 @@ dependencies {
     //Hilt
     implementation 'com.google.dagger:hilt-android:2.41'
     kapt 'com.google.dagger:hilt-compiler:2.41'
+    // For instrumented tests.
+    androidTestImplementation("com.google.dagger:hilt-android-testing:2.38.1")
+    // ...with Kotlin.
+    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.38.1")
+
+
+    debugImplementation("androidx.fragment:fragment-testing:1.4.1")
+
 
     //Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:2.4.2")
