--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,23 @@ buildscript {
     dependencies {
         classpath("com.google.dagger:hilt-android-gradle-plugin:2.40.1")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21")
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.6.21"
+
     }
 
 }
+
+
 
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id("org.jetbrains.dokka") version "1.6.21"
+
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
